src/objects/Job_Rate_Plan_Charge_Tier__c.object
<CustomObject>
    <fields>
        <fullName>End_Unit__c</fullName>
        <label>End Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charge Tiers</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charge_Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <inlineHelpText>This is respected only when the Order Rate Plan Charge &quot;Usage Frequency&quot; is populated.</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                    <default>true</default>
                    <label>Per Unit</label>
                </value>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Unit__c</fullName>
        <label>Start Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost_Price__c</fullName>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Order Rate Plan Charge Tier</label>
    <nameField>
        <label>Order Rate Plan Charge Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Rate Plan Charge Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>